--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,23 @@
 services:
   db:
     image: postgis/postgis:14-3.3-alpine
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-    expose:
-      - "5432"
+    env_file:
+      - mountain_peak_backend/env/postgis.dev.env
+    ports:
+      - "5432:5432"
     volumes:
       - ./data/db:/var/lib/postgresql/data
   web:
     build: .
-    command: "python /code/mountain_peak_backend/manage.py runserver 0.0.0.0:8000"
+    command: "python manage.py runserver 0.0.0.0:8000"
+    env_file:
+      - mountain_peak_backend/env/postgis.dev.env
+      - mountain_peak_backend/env/django.dev.env
+    environment:
+      - AM_I_IN_A_DOCKER_CONTAINER=TRUE
     volumes:
-      - .:/code
+      - ./mountain_peak_backend:/code/mountain_peak_backend
     ports:
       - "8000:8000"
-    environment:
-      - POSTGRES_NAME=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
     depends_on:
       - db
