--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,14 @@ django-extensions = "^3.2.1"
 pydantic = "^1.10.2"
 Markdown = "^3.4.1"
 psycopg2-binary = "^2.9.5"
+ipython = "^8.6.0"
+python-dotenv = "^0.21.0"
 
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^5.0.4"
 black = "^22.10.0"
 isort = "^5.10.1"
-ipython = "^8.6.0"
 
 [build-system]
 requires = ["poetry-core"]
