--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - env/postgis.dev.env
     ports:
       - "5432:5432" # To access database on localhost if needed (pgadmin...)
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
   web:
     build: .
     command: "python manage.py runserver 0.0.0.0:8000"
