DEBUG & SECRET_KEY to env file

--- a/env/django.dev.env
+++ b/env/django.dev.env
@@ -1,3 +1,5 @@
 DJANGO_SETTINGS_MODULE=mountain_peak_backend.settings
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+SECRET_KEY=django-insecure-_wtm)sopz((_ur$%k#-+pst6)@+nrw$ah+^k_jp+$m+@j9hvmk
+DEBUG=1
