--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ psycopg2-binary = "^2.9.5"
 ipython = "^8.6.0"
 python-dotenv = "^0.21.0"
 drf-extra-fields = "^3.4.1"
+drf-yasg = "^1.21.4"
+djangorestframework-gis = "^1.0"
 
 
 [tool.poetry.group.dev.dependencies]
