--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
     "python.envFile": "${workspaceFolder}/.venv",
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "python.terminal.activateEnvironment": true,
-    "terminal.integrated.cwd": "${workspaceFolder}/mountain_peak_backend"
+    // "terminal.integrated.cwd": "${workspaceFolder}/mountain_peak_backend",
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/mountain_peak_backend"
+    ]
 }
