--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - env/postgis.dev.env
       - env/django.dev.env
     volumes:
-      - ./mountain_peak_backend:/app/code
+      - .:/code
     ports:
       - "8000:8000"
     depends_on:
