--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "mountain_peak_backend"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "~3.10.9"
 Django = "^4.1.3"
 djangorestframework = "^3.14.0"
 django-filter = "^22.1"
